--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Data Visualisation</title>
     <script type="text/javascript" src="js/lib/d3/d3.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
+    <link rel="stylesheet" href="styles/main.css">
   </head>
   <body>
     <h1>Data Visualisation</h1>
